# RK3566-libmali-gbm

./: CMakeLists.txt  README.md  main.c
src/: drm_device.c  drm_device.h  egl_context.c  egl_context.h  egl_stream_texture.c  egl_stream_texture.h  gles_demo.c  gles_demo.h  usb_camera.c  usb_camera.h
src/gles_demo/: gles_camera.c  gles_camera.h  gles_cube.c  gles_cube.h  gles_triangle.c  gles_triangle.h
src/gles_util/: esUtil.c  esUtil.h
